fix visible scrollbar when animation

--- a/src/css/page_css/index.css
+++ b/src/css/page_css/index.css
@@ -1,4 +1,8 @@
 /* BACKGROUND-ANIMATION */
+body
+{
+  overflow: hidden;
+}
 .body__background {
   background: url(../../img/welcome-page/bg-gradient.png);
   background-repeat: no-repeat;
